src/style.css
:root {
  --img-ratio: 0.504;
  --box-shadow-bgc: 53, 56, 92;
}

::selection {
  color: black;
  background-color: #ffd064;
}

::-moz-selection {
  color: black;
  background-color: #ffd064;
}

html {
  font-family: "Inter", system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
  color: white;
  scroll-behavior: smooth;
}

h1 {
  font-size: 6rem;
}

h2 {
  font-size: 5rem;
}

h3 {
  font-size: 2rem;
  margin: 8px 0;
}

p {
  font-size: 1.5rem;
  color: #9e9e9e;
}

body {
  margin: 0;
  background-color: #020202;
}

main {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

.banner-heading {
  display: flex;
  max-width: 100%;
  justify-content: center;
  align-items: center;
  overflow-x: hidden;
  margin-top: 0;
}

.banner-heading img {
  max-height: min(140vh, 1500px);
  user-select: none;

  @media screen and (max-aspect-ratio: 17/10) {
    margin-left: 10%;
  }

  @media screen and (max-aspect-ratio: 31/20) {
    margin-left: 25%;
  }

  @media screen and (max-aspect-ratio: 7/5) {
    margin-left: 40%;
  }
  @media screen and (max-aspect-ratio: 31/25) {
    margin-left: 55%;
  }

  @media screen and (max-aspect-ratio: 28/25) {
    max-width: 330vw;
  }
}

main > * {
  max-width: 1500px;
  margin-left: 50px;
  margin-right: 50px;
}

.animated-h2-container {
  position: relative;
}

.animated-h2-container > .h2-container {
  height: 90px;
  overflow-y: hidden;
}

.h2-container > h2 {
  margin: 0;
  transform: translateY(100%);
  animation: spawn-heading 1s forwards;
  animation-delay: 4s;
}

.animated-h2-container > .underline {
  position: absolute;
  top: 90px;
  min-width: 240px;
  border-radius: 50%;
  height: .2rem;
  background-color: #fff;
  opacity: .1;
  animation: spawn-underline 1s forwards;
  animation-delay: 4s;
}

.animated-h2-container > .underline-shadow {
  filter: blur(10px);
  top: 100px;
  opacity: .1;
  animation: spawn-underline 1s forwards;
  animation-delay: 4s;
}

@keyframes spawn-heading {
  0% {
    transform: translateY(100%);
    opacity: 0;
  }

  80% {
    transform: translateY(-10%);
    opacity: 1;
  }

  100% {
    transform: translateY(0);
  }

}

@keyframes spawn-underline {
  0% {
    opacity: .1;
  }

  80% {
    opacity: 1;
  }

  100% {
    opacity: 0;
  }
}

.projects-section {
  width: 1500px;
  margin-bottom: 180px;
  @media screen and (max-width: 1620px) {
    max-width: 1500px;
    width: auto;
  }
}

.project-title-container {
  position: relative;
}

.projects-first-title {
  transition: transform .2s;
}

.minimize-up {
  position: absolute;
  transform: scale(.3) translate(-115%, -160%);
  color: #676767;
  top: -70px;
}

.current-project-container {
  display: grid;
  grid-template-columns: repeat(2, 1fr);
  grid-template-rows: repeat(2, 1fr);
  justify-items: start;
  column-gap: 70px;
}

.img-slider-container {
  position: relative;
  grid-row: 1/2;
  width: 800px;
  height: calc(800px * var(--img-ratio));
  transition: border .2s;

  @media screen and (max-width: 1620px) {
    width: 49.4vw;
    height: calc(49.4vw * var(--img-ratio));
  }
}

.img-slider-container .sliding-img {
  position: absolute;
  display: flex;
  justify-content: center;
  align-items: center;
  min-width: 100%;
  transition: transform .2s;
  user-select: none;
}

.img-slider-container .sliding-img::before {
  content: "";
  position: absolute;
  width: 100%;
  height: 100%;
  background-color: black;
  transition: opacity .2s;
}

.sliding-img img {
  max-width: 100%;
}

.sliding-img img:nth-of-type(2),
.sliding-img picture:nth-of-type(2) img {
  position: absolute;
  opacity: 0;
  filter: blur(45px);
  z-index: -1;
  transition: opacity .2s;
}

.carouselLeftLeft {
  transform: translateX(-13%) scale(.8);
  z-index: -3;
}

.carouselLeftLeft::before {
  opacity: .85;
}


.carouselLeft {
  transform: translateX(-7%) scale(.9);
  z-index: -2;
}

.carouselLeft::before {
  opacity: .6;
}

.carouselCenter {
  transform: translateX(0) scale(1);
  z-index: 0;
}

.carouselCenter::before {
  opacity: 0;
}

.carouselRight {
  transform: translateX(7%) scale(.9);
  z-index: -2;
}

.carouselRight::before {
  opacity: .6;
}

.carouselRightRight {
  transform: translateX(13%) scale(.8);
  z-index: -3;
}

.carouselRightRight::before {
  opacity: .85;
}

.carouselHideLeft {
  transform: translateX(-19%) scale(.7);
  opacity: 0;
}

.carouselHideRight {
  transform: translateX(19%) scale(.7);
  opacity: 0;
}

.box-shadow-visible > img:nth-of-type(2) {
  opacity: .5;
}

.project-date-container {
  grid-row: 2/3;
  justify-self: center;
}

.project-date-container > p {
  font-size: 1.3rem;
  font-weight: bold;
  transition: opacity .2s;
}

.project-date-container > p.hide {
  position: absolute;
  top: 0;
  visibility: hidden;
  opacity: 0;
}

.project-date-container > p.show {
  opacity: .8;
}

.project-related-container {
  grid-row: 1/3;
  display: flex;
  flex-direction: column;
  gap: 20px;
}

.project-related-container > * {
  position: relative;
}

.project-related-container p {
  transition: opacity .2s;
  margin: 5px 0;
}

.hide {
  position: absolute;
  top: 50px;
  visibility: hidden;
  opacity: 0;
}

.show {
  opacity: 1;
}

.arrows-container {
  display: flex;
  justify-content: space-between;
  align-items: center;
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  z-index: 1;
}

.arrows-container > svg {
  fill: rgba(0, 0, 0, .7);
  max-width: 10%;
  max-height: 10%;
  filter: drop-shadow(0 0 10px rgba(255, 255, 255, 1));
}

